policykit-1 (0.105-16) UNRELEASED; urgency=medium

  * Drop obsolete Breaks from pre-wheezy.

 -- Michael Biebl <biebl@debian.org>  Sat, 16 Apr 2016 13:28:05 +0200

policykit-1 (0.105-15) unstable; urgency=medium

  * Generate tight inter-package dependencies.
    This ensures that everything from the same source package is upgraded in
    lockstep. (Closes: #817998)

 -- Michael Biebl <biebl@debian.org>  Thu, 14 Apr 2016 13:57:13 +0200

policykit-1 (0.105-14.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS on non-linux/non-systemd. (Closes: #798769)

 -- Adam Borowski <kilobyte@angband.pl>  Thu, 14 Jan 2016 06:28:38 +0100

policykit-1 (0.105-14) unstable; urgency=medium

  * debian/policykit-1.preinst: Use systemctl unmask instead of direct symlink
    removal for consistency.
  * Fix handling of multi-line helper output. Thanks Dariusz Gadomski! Patch
    backported from upstream master. (LP: #1510824)

 -- Martin Pitt <mpitt@debian.org>  Mon, 23 Nov 2015 11:38:00 +0100

policykit-1 (0.105-13) unstable; urgency=medium

  * debian/policykit-1.{pre,pos}inst: Temporarily mask polkitd.service while
    policykit-1 is unpackaged but not yet configured. During that time we
    don't yet have our D-Bus policy in /etc so that polkitd cannot work yet.
    This can be dropped once the D-Bus policy moves to /usr.
    (Closes: #794723, LP: #1447654)

 -- Martin Pitt <mpitt@debian.org>  Wed, 21 Oct 2015 08:11:22 +0200

policykit-1 (0.105-12) unstable; urgency=medium

  * Team upload
  * Replace 03_complete_session.patch with a change from upstream
    which seems like a more correct solution for LP#445303, LP#649939
  * 05_revert-admin-identities-unix-group-wheel.patch: remove confusing
    staff -> desktop_admin_r change in a man page (desktop_admin_r looks
    vaguely like a SELinux role but is actually being used as a group);
    keep only the actual functional change. This matches the syntactically