@@ -4,7 +4,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh $@ --with autoreconf
+	dh $@ --with autoreconf,gir
 
 DPKG_GENSYMBOLS_CHECK_LEVEL=4
 export DPKG_GENSYMBOLS_CHECK_LEVEL
@@ -30,10 +30,6 @@ override_dh_auto_test:
 
 override_dh_makeshlibs:
 	dh_makeshlibs -Xusr/lib/$(DEB_HOST_MULTIARCH)/polkit-1/
-
-override_dh_shlibdeps:
-	dh_shlibdeps
-	dh_girepository
 
 override_dh_install-arch:
 	dh_install -a
