@@ -1,6 +1,7 @@
 policykit-1 (0.105-16) UNRELEASED; urgency=medium
 
   * Drop obsolete Breaks from pre-wheezy.
+  * Use gir addon instead of calling dh_girepository manually.
 
  -- Michael Biebl <biebl@debian.org>  Sat, 16 Apr 2016 13:28:05 +0200
 
